k8s-poc-consul.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-poc-consul-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-poc-consul
    spec:
      containers:
      - name: k8s-poc-consul
        image: consul:latest
        ports:
        # - name: server
        #   containerPort: 8300
        #   protocol: "TCP"
        # - name: serflan-tcp
        #   containerPort: 8301
        #   protocol: "TCP"
        # - name: serflan-udp
        #   containerPort: 8301
        #   protocol: "UDP"
        # - name: serfwan-tcp
        #   containerPort: 8302
        #   protocol: "TCP"
        # - name: serfwan-udp
        #   containerPort: 8302
        #   protocol: "UDP"
        # - name: rpc-port
        #   containerPort: 8400
        #   protocol: "TCP"
        - name: api-port
          containerPort: 8500
          # protocol: "TCP"
        # - name: consuldns-tcp
        #   containerPort: 8600
        #   protocol: "TCP"
        # - name: consuldns-udp
        #   containerPort: 8600
        #   protocol: "UDP"
