k8s-poc-vault.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-poc-vault-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-poc-vault
    spec:
      containers:
      - name: k8s-poc-vault
        image: vault:0.9.6
        ports:
        - name: api-port
          containerPort: 8200
