k8s-poc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-poc-deployment-${suffix}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-poc
    spec:
      containers:
      - name: k8s-poc
        image: ehipolito/k8s-poc:latest
        ports:
        - containerPort: 8181
          name: k8s-poc-port
