k8s-poc-consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-poc-consul-service
spec:
  ports:
  # - port: 8300
  #   targetPort: server
  #   protocol: TCP
  # - port: 8301
  #   targetPort: serflan-tcp
  #   protocol: TCP
  # - port: 8301
  #   targetPort: serflan-udp
  #   protocol: UDP
  # - port: 8302
  #   targetPort:  serfwan-tcp
  #   protocol: TCP
  # - port: 8302
  #   targetPort:  serfwan-udp
  #   protocol: UDP
  # - port: 8400
  #   targetPort:  rpc-port
  #   protocol: TCP
  - port: 80
    targetPort:  api-port
    protocol: TCP
  # - port: 8600
  #   targetPort:  consuldns-tcp
  #   protocol: TCP
  # - port: 8600a
  #   targetPort:  consuldns-UDP
  #   protocol: UDP
  selector:
    app: k8s-poc-consul
  type: LoadBalancer
