k8s-poc-person-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-person-svc
spec:
  ports:
  - port: 80
    targetPort:  k8s-person-port
    protocol: TCP
  selector:
    app: k8s-poc-person
  type: LoadBalancer
