k8s-poc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-poc-service-v1
spec:
  ports:
  - name: http
    port: 80
    targetPort:  k8s-poc-port
    protocol: TCP
  selector:
    app: k8s-poc-v1
  type: LoadBalancer
