k8s-poc-vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-poc-vault-service
spec:
  ports:
  - port: 8200
    targetPort:  api-port
    protocol: TCP
  selector:
    app: k8s-poc-vault
  type: LoadBalancer
