k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-poc-rules
spec:
  rules:
  - host: k8s-poc-v1
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-poc-service-v1
          servicePort: 80
  - host: k8s-poc-v2
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-poc-service-v2
          servicePort: 80
